--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "btoa": "^1.2.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.6",
+    "dotenv": "^16.4.7",
     "dropbox": "^10.34.0",
     "express": "^4.21.1",
     "fetch": "^1.1.0",
@@ -26,5 +25,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Cartmade2019/Iron-display-dropbox-feature.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Cartmade2019/Iron-display-dropbox-feature/issues"
+  },
+  "homepage": "https://github.com/Cartmade2019/Iron-display-dropbox-feature#readme",
+  "description": ""
 }
